<resources>
    <string name="app_name">Drummer Metronome</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="startLabelButton">Start</string>
    <string name="stoptLabelButton">Stop</string>
    <string name="tempo_message">Type tempo</string>
    <string name="PLAYBACK_POSITON_UPDATE_TAG">PlaybackPositionUpdateTag</string>
    <string name="title_activity_increase_tempo">IncreaseTempo</string>
    <string name="defaultTempoValue">80</string>
    <string name="defaultBarNumberValue">4</string>
    <string name="currentTempoLabel">Current Tempo :</string>
    <string name="seconds">seconds</string>
    <string name="title_activity_edit_loop">EditLoopActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="plus_sign">+</string>
    <string name="new_sequence">default_sequence_name</string>
    <string name="save_sequence">save_sequence_button_label</string>
    <string name="minus_sign">-</string>


    <string-array name="beatNumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="timeSignatures">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
    </string-array>

    <integer-array name="iterationNumbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </integer-array>


</resources>
