<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.doumdoum.nmanel.metronome.SequenceEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="removeSequenceAction"
            android:text="@string/minus_sign" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="createNewSequenceAction"
            android:text="@string/plus_sign" />
    </LinearLayout>

    <EditText
        android:id="@+id/sequenceEditorNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_sequence" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">>

        <com.doumdoum.nmanel.metronome.ui.BarsSpinner
            android:id="@+id/sbarAndSequencesChoiceSpinnerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/iterationNumberSpinnerId"
            android:layout_width="48dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:onClick="addToSequenceAction" />
    </LinearLayout>

    <com.doumdoum.nmanel.metronome.ui.SequenceView
        android:id="@+id/sequenceListViewId"
        android:layout_width="match_parent"
        android:layout_height="316dp" />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="saveSequenceAction"
        android:text="@string/save_sequence" />
</LinearLayout>
