<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.doumdoum.nmanel.metronome.MetronomeActivity">

    <LinearLayout
        android:id="@+id/tempoLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/tempoValueId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/linearborder"
            android:inputType="number"
            android:text="@string/defaultTempoValue"
            android:textAlignment="center"
            android:textSize="50dp" />

        <LinearLayout
            android:id="@+id/changeTempoButtonsLayoutId"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/increaseTempoButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increaseTempoAction"
                android:text="+"
                android:textSize="30dp" />

            <Button
                android:id="@+id/decreaseTempoButtonId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="decreaseTempoAction"
                android:text="-"
                android:textSize="30dp" />

        </LinearLayout>

        <Button
            android:id="@+id/startStopButtonId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:elevation="6dp"
            android:onClick="startStopClickAction"
            android:text="Start"
            android:textSize="30dp" />
    </LinearLayout>

    <com.doumdoum.nmanel.metronome.ui.BarEditor
        android:id="@+id/mainActivityBarEditorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tempoLayoutId" />

    <Switch
        android:id="@+id/increaseTempoSwitchId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivityBarEditorId"
        android:text="Increase tempo periodically" />

    <LinearLayout
        android:id="@+id/increaseSettingsGroupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/increaseTempoSwitchId"
        android:orientation="vertical">
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/increaseLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="increase" />

        <EditText
            android:id="@+id/tempoIncrementValueId"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/increaseTempoSwitchId"
            android:ems="10"
            android:inputType="number"
            android:text="5" />

        <TextView
            android:id="@+id/everyLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="BPM, every" />

        <EditText
            android:id="@+id/measureNumberBeforeIncrementValueId"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/defaultBarNumberValue" />
        <TextView
            android:id="@+id/barsLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="bars" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/currentTempoLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTempoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/currentTempoLabel"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <Switch
        android:id="@+id/skipMeasureSwitchId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/increaseSettingsGroupId"
        android:text="Play one measure on two" />

    <Switch
        android:id="@+id/timerSwitchId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skipMeasureSwitchId"
        android:text="Enable timer" />

    <LinearLayout
        android:id="@+id/durationTimerSettingsGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerSwitchId"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/timerDurationValueId"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="60" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/seconds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/durationTimerSettingsGroupId"
        android:orientation="vertical">

        <Switch
            android:id="@+id/sequenceSelectionSwitchId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Use a sequence" />
        <LinearLayout
            android:id="@+id/sequenceSelectionLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.doumdoum.nmanel.metronome.ui.SequencesSpinner
                    android:id="@+id/sequencesSpinnerId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/durationTimerSettingsGroupId"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:onClick="openSequenceEditorAction"
                    android:text="..." />
            </LinearLayout>

            <com.doumdoum.nmanel.metronome.ui.SequenceView
                android:id="@+id/mainActivitySequenceViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
